style : end basic style

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,3 +3,7 @@
    font-family: "Jeju Gothic";
    src: url(../fonts/JejuGothic.ttf) format("truetype");
 }
+img {
+   max-width: 100%;
+   height: auto;
+}
