--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,10 @@ img {
    max-width: 100%;
    height: auto;
 }
+input[type="password"] {
+   font-family: "Courier New", Courier, monospace;
+}
+
+body {
+   background-color: #fafafa;
+}
